# tiny3D

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  Tiny3DTargets.cmake  bench_feature_registration_compare.cpp  cmake_install.cmake
.github/: pull_request_template.md
.github/workflows/: build_wheels.yml  update-release.yml
cmake/: Tiny3DLink3rdpartyLibraries.cmake  Tiny3DMakeHardeningFlags.cmake  Tiny3DPackaging.cmake  Tiny3DPrintConfigurationSummary.cmake  Tiny3DSYCLTargetSources.cmake  Tiny3DSetGlobalProperties.cmake  Tiny3DShowAndAbortOnWarning.cmake
cpp/: CMakeLists.txt  Makefile  cmake_install.cmake
cpp/pybind/: CMakeLists.txt  Makefile  _build_config.py.in  cmake_install.cmake  docstring.cpp  docstring.h  make_install_pip_package.cmake  make_python_package.cmake  pybind.map  pybind_filesystem.h  tiny3d_pybind.cpp  tiny3d_pybind.h
cpp/pybind/geometry/: CMakeLists.txt  Makefile  boundingvolume.cpp  cmake_install.cmake  geometry.cpp  geometry.h  geometry_trampoline.h  kdtreeflann.cpp  meshbase.cpp  pointcloud.cpp  trianglemesh.cpp  voxelgrid.cpp
cpp/pybind/io/: CMakeLists.txt  Makefile  class_io.cpp  cmake_install.cmake  io.cpp  io.h
cpp/pybind/pipelines/: CMakeLists.txt  Makefile  cmake_install.cmake  pipelines.cpp  pipelines.h
cpp/pybind/pipelines/registration/: feature.cpp  registration.cpp  registration.h
cpp/pybind/utility/: Makefile  cmake_install.cmake  eigen.cpp  logging.cpp  random.cpp  utility.cpp  utility.h
cpp/tiny3d/: CMakeLists.txt  Macro.h  Makefile  Tiny3D.h.in  Tiny3D.pc  Tiny3D.pc.in  Tiny3DConfig.cmake.in  Tiny3DConfig.cpp  Tiny3DConfig.h.in  cmake_install.cmake  cmake_uninstall.cmake  libTiny3D.map  version.txt
cpp/tiny3d/geometry/: BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt  Geometry.h  Geometry2D.h  Geometry3D.cpp  Geometry3D.h  KDTreeFlann.cpp  KDTreeFlann.h  KDTreeSearchParam.h  Makefile  MeshBase.cpp  MeshBase.h  PointCloud.cpp  PointCloud.h  TriangleMesh.cpp  TriangleMesh.h  VoxelGrid.cpp  VoxelGrid.h  cmake_install.cmake
cpp/tiny3d/io/: CMakeLists.txt  FileFormatIO.cpp  FileFormatIO.h  Makefile  ModelIO.cpp  ModelIO.h  PointCloudIO.cpp  PointCloudIO.h  TriangleMeshIO.cpp  TriangleMeshIO.h  cmake_install.cmake
cpp/tiny3d/io/file_format/: FilePLY.cpp  FileXYZ.cpp
cpp/tiny3d/pipelines/: CMakeLists.txt  Makefile  cmake_install.cmake
cpp/tiny3d/pipelines/registration/: CorrespondenceChecker.cpp  CorrespondenceChecker.h  Feature.cpp  Feature.h  Registration.cpp  Registration.h  TransformationEstimation.cpp  TransformationEstimation.h
cpp/tiny3d/utility/: CMakeLists.txt  CPUInfo.cpp  CPUInfo.h  Eigen.cpp  Eigen.h  FileSystem.cpp  FileSystem.h  Helper.cpp  Helper.h  Logging.cpp  Logging.h  Makefile  Parallel.cpp  Parallel.h  Preprocessor.h  ProgressBar.cpp  ProgressBar.h  ProgressReporters.h  Random.cpp  Random.h  cmake_install.cmake
fmt/lib/pkgconfig/: fmt.pc
fmt/src/ext_fmt-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  fmt-targets.cmake  install_manifest.txt
fmt/src/ext_fmt-stamp/: download-ext_fmt.cmake  ext_fmt-urlinfo.txt  extract-ext_fmt.cmake
fmt/tmp/: ext_fmt-cfgcmd.txt
jsoncpp/lib/pkgconfig/: jsoncpp.pc
jsoncpp/src/ext_jsoncpp-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
jsoncpp/src/ext_jsoncpp-build/include/: Makefile  cmake_install.cmake
jsoncpp/src/ext_jsoncpp-build/src/: Makefile  cmake_install.cmake
jsoncpp/src/ext_jsoncpp-build/src/lib_json/: Makefile  cmake_install.cmake
jsoncpp/src/ext_jsoncpp-stamp/: download-ext_jsoncpp.cmake  extract-ext_jsoncpp.cmake
jsoncpp/tmp/: ext_jsoncpp-cfgcmd.txt
lib/: _build_config.py.in
lib/Release/: libTiny3D.so.0.0
lib/Release/Python/cpu/: _build_config.py  libTiny3D.so.0.0
lib/python_package/: MANIFEST.in  pyproject.toml  setup.py  tiny3d.json
lib/python_package/tiny3d/: __init__.py
nanoflann/src/ext_nanoflann-stamp/: download-ext_nanoflann.cmake  ext_nanoflann-urlinfo.txt  extract-ext_nanoflann.cmake
python/: MANIFEST.in  README.rst  install.json  pyproject.toml  requirements.txt  setup.py  setup.py.in
python/tiny3d/: __init__.py  __init__.py.in
util/: check_cpp_style.cmake  check_style.py  ci_utils.sh  install_deps_ubuntu.sh  run_ci.sh
