[build-system]
requires = [
    "setuptools>=67.3.2", 
    "wheel>=0.38.4",
    "pybind11>=2.6.0",
    "cmake>=3.16",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Temporarily restrict builds to Python 3.9 and 3.12 while expanding support.
# Original full matrix (for future):
# build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
build = ["cp39-*", "cp312-*"]
skip = ["pp*", "*-musllinux*", "*-win32", "*i686"]
archs = ["auto64"]
build-verbosity = 1

[tool.cibuildwheel.environment]
CMAKE_BUILD_TYPE = "Release"
TINY3D_USE_NATIVE_DEPENDENCY_BUILD = "1"
